# GorillaNation-Faucet

./: .gitignore  log.txt  main.py  pyproject.toml  requirements.txt
bananopy/: constants.py
static/: banano.json  main.css
templates/: index.html
