[tool.poetry]
name = "banano-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
Flask = "^2.0.2"
Flask-xCaptcha = "^0.5.2"
replit = "^3.2.4"
Flask-Limiter = "^2.0.4"
pycoingecko = "^2.2.0"
waitress = "^2.0.0"
bananopie = "^0.0.4"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
